Added cfcl, started work on modules/behaviors

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -17,5 +17,6 @@ apply from: '../build.dependencies.gradle'
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(path: ':cfcl')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
